[project]
name = "asyncbalancer"
version = "0.2.1b1"
description = ""
authors = [
    {name = "Michal Jakubowski",email = "michalk415@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "redis (>=7.2.0,<8.0.0)",
]
classifiers = [
    "Development Status :: 4 - Beta",
]

[project.scripts]
asyncbalancer = "asyncbalancer.cli:main"

[tool.poetry]
packages = [{include = "asyncbalancer", from = "src"}]

[tool.asyncbalancer]
driver = "redis"
resources_file = "./examples/config.json"

[tool.asyncbalancer.drivers.redis]
host = "localhost"
port = 6379
db = 0

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
